# BudgetTool

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  roadmap.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/migrations/: 001_create_users.sql  002_create_files.sql  003_create_rules_configs.sql  004_create_manual_entries.sql  005_create_journal_settings.sql  006_scope_manual_entries_to_journal.sql
api/src/: auth.rs  error.rs  files.rs  hledger.rs  lib.rs  main.rs  manual_entries.rs  manual_entries_gen.rs  models.rs  reports.rs  routes.rs  rules_configs.rs  rules_gen.rs
api/src/auth/: extractor.rs  handlers.rs  jwt.rs  mod.rs  models.rs
api/src/core/: db.rs  error.rs  hledger.rs  mod.rs  response.rs  state.rs
api/src/files/: filename.rs  handlers.rs  journal_settings.rs  mod.rs  models.rs
api/src/manual_entries/: generator.rs  journal.rs  mod.rs  models.rs  periodics.rs  prices.rs  transactions.rs
api/src/reports/: handlers.rs  journals.rs  mod.rs
api/src/rules/: generator.rs  handlers.rs  mod.rs  models.rs  service.rs
api/tests/: auth_integration.rs  hledger_integration.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  auth.tsx  index.css  main.tsx
frontend/src/components/: ConvertModal.css  ConvertModal.tsx  DataTable.css  DataTable.tsx  DateRangePicker.css  DateRangePicker.tsx  ErrorBoundary.css  ErrorBoundary.tsx  FileList.css  FileList.tsx  FileUploader.css  FileUploader.tsx  JournalSettingsModal.css  JournalSettingsModal.tsx  Layout.css  (+8 more)
infra/: Dockerfile.api  Dockerfile.frontend  nginx.conf
(+56 files in other folders)
